--- a/techio.yml
+++ b/techio.yml
@@ -2,16 +2,16 @@ title: Bitboards basis
 plan:
 - title: Introduction to Bitboards
   plan:
-    - title: Bitboards and simulation
-      statement: markdowns/introduction.md
-    - title: "Example: a Connect Four engine"
-      statement: markdowns/introduction_example.md
+  - title: Bitboards and simulation
+    statement: markdowns/introduction.md
+  - title: 'I.1 Example: a Tic-Tac-Toe engine'
+    statement: markdowns/introduction_example.md
 - title: Bitboard operations
   plan:
-    - title: Board representation
-      statement: markdowns/board.md
-    - title: Managing entity
-      statement: markdowns/managing_entity.md
+  - title: Board representation
+    statement: markdowns/board.md
+  - title: Managing entity
+    statement: markdowns/managing_entity.md
 projects:
   cpp:
     root: /cpp-project
