--- a/techio.yml
+++ b/techio.yml
@@ -6,13 +6,17 @@ plan:
     statement: markdowns/introduction.md
   - title: 'I.2 Example: a Tic-Tac-Toe engine'
     statement: markdowns/tictactoe_example.md
-- title: II. Bitboard operations
+- title: II. Single cell operations
   plan:
   - title: II.1 Board and position
     statement: markdowns/board_and_position.md
-  - title: II.2 Single cell operations
-    statement: markdowns/single_cell_operations.md
-  - title: II.3 Multi cells operations
+  - title: II.2 Absolute position
+    statement: markdowns/absolute_position.md
+  - title: II.3 Relative position
+    statement: markdowns/relative_position.md
+- title: III. Multi cells operations
+  plan:
+    - title: III.1 Filter and iterator
     statement: markdowns/managing_entity.md
 projects:
   cpp:
