--- a/techio.yml
+++ b/techio.yml
@@ -6,15 +6,17 @@ plan:
     statement: markdowns/introduction.md
   - title: 'I.2 Example: a Tic-Tac-Toe engine'
     statement: markdowns/tictactoe_example.md
-- title: II. Single cell operations
+- title: II. Board operations
   plan:
-  - title: II.1 Board
+  - title: II. Basic operations
+    statement: markdowns/chapter2.md
+  - title: II.1 Understanding board
     statement: markdowns/board.md
-  - title: II.2 Position
+  - title: II.2 Defining positions
     statement: markdowns/position.md
   - title: II.3 Single cell operations
     statement: markdowns/single_cell_operations.md
-- title: III. Multi cells operations
+- title: III. Advanced operations
   plan:
     - title: III.1 Filter and iterator
       statement: markdowns/managing_entity.md
