--- a/techio.yml
+++ b/techio.yml
@@ -7,7 +7,7 @@ plan:
   - title: 'I.2 Example: a Tic-Tac-Toe engine'
     statement: markdowns/tictactoe_example.md
 - title: II. Basic operations
-  plan
+  plan:
   - title: II. Basic operations
     statement: markdowns/chapter2.md
   - title: II.1 Understanding board
