--- a/techio.yml
+++ b/techio.yml
@@ -16,10 +16,10 @@ plan:
     statement: markdowns/position.md
   - title: II.3 Single cell operations
     statement: markdowns/single_cell_operations.md
-- title: III. Advanced operations
-  plan:
-    - title: III.1 Filter and iterator
-      statement: markdowns/managing_entity.md
+# - title: III. Advanced operations
+#   plan:
+#     - title: III.1 Filter and iterator
+#       statement: markdowns/managing_entity.md
 projects:
   cpp:
     root: /cpp-project
