--- a/techio.yml
+++ b/techio.yml
@@ -10,12 +10,12 @@ plan:
   plan:
   - title: II. Basic operations
     statement: markdowns/chapter2.md
-  - title: II.1 Understanding board
-    statement: markdowns/board.md
-  - title: II.2 Defining positions
-    statement: markdowns/position.md
-  - title: II.3 Single cell operations
-    statement: markdowns/single_cell_operations.md
+  # - title: II.1 Understanding board
+  #   statement: markdowns/board.md
+  # - title: II.2 Defining positions
+  #   statement: markdowns/position.md
+  # - title: II.3 Single cell operations
+  #   statement: markdowns/single_cell_operations.md
 # - title: III. Advanced operations
 #   plan:
 #     - title: III.1 Filter and iterator
