--- a/techio.yml
+++ b/techio.yml
@@ -12,14 +12,10 @@ plan:
     statement: markdowns/chapter2.md
   - title: II.1 Understanding board
     statement: markdowns/board.md
-  - title: II.2 Defining positions
+  - title: II.2 Handling coordinates
     statement: markdowns/position.md
   - title: II.3 Single cell operations
     statement: markdowns/single_cell_operations.md
-# - title: III. Advanced operations
-#   plan:
-#     - title: III.1 Filter and iterator
-#       statement: markdowns/managing_entity.md
 projects:
   cpp:
     root: /cpp-project
