--- a/techio.yml
+++ b/techio.yml
@@ -16,6 +16,8 @@ plan:
     statement: markdowns/position.md
   - title: II.3 Single cell operations
     statement: markdowns/single_cell_operations.md
+  - title: II.4 TP1: Escape the maze
+    statement: markdowns/tp1.md
 projects:
   cpp:
     root: /cpp-project
