--- a/cpp-project/CMakeLists.txt
+++ b/cpp-project/CMakeLists.txt
@@ -1,4 +1,3 @@
 cmake_minimum_required (VERSION 2.6)
-project (universe)
-add_executable(universe src/UniverseTest.cpp src/Exercises/Universe.h src/Exercises/Universe.cpp)
+project (maze)
 add_executable(maze src/MazeTest.cpp src/Exercises/Maze.h src/Exercises/Maze.cpp)
